Fixed Navigation bar size and drop-down menu right shift fixed

--- a/CSS/navigation.css
+++ b/CSS/navigation.css
@@ -13,6 +13,7 @@
 								list-style:none;
 								margin:0;
 								padding:0;
+								margin-left:-5px;
 						}
 
 						.navigation > ul > li{
@@ -20,6 +21,7 @@
 								/*margin-top:10px;*/
 								background-color:#100e17;
 								padding: 5px;
+								width:115px;
 						}
 
 						.navigation ul > li > ul{
@@ -39,7 +41,7 @@
 								font-size:20px;
 								color:white;
 								text-align:center;
-								width:100px;
+								width:110px;
 						}
 
 						.navigation li:hover{
